syntax = "proto3";

package policy;

option go_package="github.com/kubearmor/KubeArmor/protobuf";

enum PolicyStatus {
  Failure = 0 ;
  Applied = 1 ;
  Deleted = 2 ;
  Modified = 3 ;
  NotExist = 4;
  Invalid = 5;
}

message response {
    PolicyStatus status = 1;
}

message policy {
    bytes policy = 1;
}

service PolicyService {
    rpc containerPolicy (policy) returns (response);
    rpc hostPolicy (policy) returns (response);
}

service ReversePolicyService {
    rpc containerPolicy (stream response) returns (stream policy);
    rpc hostPolicy (stream response) returns (stream policy);
}
